--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnhJEsssfcjN0DfUOcZWMt",
+      "authorship_tag": "ABX9TyN54JEWj3Ih0EjXT+iOB4qK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/justnotanu/projectpython/blob/main/DSA_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/justnotanu/DSApython_practiceProblems/blob/main/DSA_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "dW5aPXyP5VXL"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "K8AjdOLQ7L5L"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,75 @@
       "metadata": {
         "id": "QinnIGhrDUqn"
       },
-      "execution_count": 22,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4# An ugly number is a positive integer whose prime factors are limited to 2, 3, and 5.\n",
+        "\n",
+        "Given an integer n, return true if n is an ugly number.#leetcode"
+      ],
+      "metadata": {
+        "id": "dDRJ9ToGsYp-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution:\n",
+        "    def isUgly(self, n: int) -> bool:\n",
+        "        if n <= 0:\n",
+        "            return False\n",
+        "        if n == 1:\n",
+        "            return True\n",
+        "\n",
+        "        for factor in [2, 3, 5]:\n",
+        "            while n % factor == 0:\n",
+        "                n //= factor\n",
+        "\n",
+        "        return n == 1"
+      ],
+      "metadata": {
+        "id": "PiLTk3uDsRfG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5#Given two positive integers a and b, return the number of common factors of a and b.\n",
+        "\n",
+        "An integer x is a common factor of a and b if x divides both a and b.#leetcode"
+      ],
+      "metadata": {
+        "id": "ZnrTcZP4sxbY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "class Solution:\n",
+        "  def commonFactors(self, a:int, b:int) ->int:\n",
+        "    #step 1: Find the GCD of a and b\n",
+        "    gcd = math.gcd(a,b)\n",
+        "\n",
+        "    #step 2: Find the number of factors of the the GCD\n",
+        "    count = 0\n",
+        "    for i in range (1, gcd+1):\n",
+        "      if gcd %i==0:\n",
+        "        count = count + 1\n",
+        "\n",
+        "        return 0\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mqWvVqCas6PU"
+      },
+      "execution_count": 1,
       "outputs": []
     }
   ]
